--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
 		"lint:fix": "eslint src --fix"
 	},
 	"dependencies": {
+		"@auth/prisma-adapter": "^1.0.1",
+		"@next-auth/prisma-adapter": "^1.0.7",
+		"@prisma/client": "^5.0.0",
 		"axios": "^1.1.3",
 		"csstype": "^3.1.1",
 		"framer-motion": "^10.12.16",
 		"jotai": "^2.1.0",
 		"next": "^13.0.4",
+		"next-auth": "^4.22.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.0",
@@ -21,6 +25,7 @@
 	"devDependencies": {
 		"@headlessui/react": "^1.6.6",
 		"@next/eslint-plugin-next": "^13.0.4",
+		"@types/next-auth": "^3.15.0",
 		"@types/node": "^20.2.5",
 		"@types/react": "^18.0.18",
 		"@types/react-dom": "^18.0.6",
